--- a/Bitbird.Core.Data/Validation/ValidationMessages.de.resx
+++ b/Bitbird.Core.Data/Validation/ValidationMessages.de.resx
@@ -159,4 +159,7 @@
   <data name="StringMaxLength" xml:space="preserve">
     <value>Der Text darf nicht länger als {0} Zeichen sein.</value>
   </data>
+  <data name="Distinct" xml:space="preserve">
+    <value>Zumindest ein Wert kommt öfter als einmal vor.</value>
+  </data>
 </root>
